--- a/app/templates/role/index.html
+++ b/app/templates/role/index.html
@@ -9,12 +9,12 @@
                     权限组及权限明细管理
                 </span>
             </h3>
-            <!--div class="fright">
+            <div class="fright">
                 <form id="frm_search" class="layui-form" lay-filter="frm_search">
                     <div class="layui-inline">
-                        <label>权限名称：</label>
+                        <label>权限标识：</label>
                         <div class="layui-input-inline">
-                            <input name="job_number" type="text" class="layui-input txt-focus" value=""
+                            <input name="role" type="text" class="layui-input txt-focus" value=""
                                    placeholder="">
                         </div>
                     </div>
@@ -34,7 +34,7 @@
                         </div>
                     </div>
                 </form>
-            </div-->
+            </div>
         </div>
         <div class="panel-box pl25">
             <div id="grid_main">
@@ -44,35 +44,42 @@
     </div>
 {% endblock %}
 {% block js %}
-    <div id="div_authorize" class="layer-pop">
-        <form class="layui-form layui-form-pane" lay-filter="frm_authorize" id="frm_authorize">
+    <div id="div_add_edit" class="layer-pop">
+        <form class="layui-form layui-form-pane" lay-filter="frm_add_edit" id="frm_add_edit">
             <div class="layui-form-item">
-                <label class="layui-form-label">姓名：</label>
+                <label class="layui-form-label">权限标识：</label>
                 <div class="layui-input-block">
-                    <input name="realname" type="text" class="layui-input" value=""
-                           readonly="readonly" lay-verify="required" lay-vertype="tips">
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">手机：</label>
-                <div class="layui-input-block">
-                    <input name="mobile" type="text" class="layui-input" value=""
+                    <input name="role" type="text" class="layui-input" value="" placeholder="如: MyRoleGroup"
                            lay-verify="required" lay-vertype="tips">
                 </div>
             </div>
             <div class="layui-form-item">
-                <label class="layui-form-label">权限：</label>
+                <label class="layui-form-label">权限名称：</label>
                 <div class="layui-input-block">
-                    <select id="f_role" name="role" title="" lay-filter="f_role" lay-search
-                            data-fjson="{{ url_for('role.role_data') }}" data-fx="role"></select>
+                    <input name="role_name" type="text" class="layui-input" value="" placeholder="如: 通用权限组"
+                           lay-verify="required" lay-vertype="tips">
+                </div>
+            </div>
+            <div class="layui-form-item layui-form-text">
+                <label class="layui-form-label">允许的权限：</label>
+                <div class="layui-input-block">
+                    <textarea name="role_allow" class="layui-textarea" placeholder="英文逗号分隔每个权限, 如:
+asn,bgp.bgp_index,bgp.bgp_list" lay-verify="required" lay-vertype="tips"></textarea>
+                </div>
+            </div>
+            <div class="layui-form-item layui-form-text">
+                <label class="layui-form-label">禁止的权限：</label>
+                <div class="layui-input-block">
+                    <textarea name="role_deny" class="layui-textarea" placeholder="英文逗号分隔每个权限(可为空), 如:
+asn.asn_delete"></textarea>
                 </div>
             </div>
             <div class="center">
-                <button class="layui-btn layui-btn-sm btn-primary" type="submit" lay-submit
-                        lay-filter="btn_authorize_save">
+                <input type="hidden" name="role_id" class="pop-role-id" value="0">
+                <button class="layui-btn layui-btn-sm btn-primary" type="submit" lay-submit lay-filter="btn_save">
                     <i class="ficon icon-gou"></i>保 存
                 </button>
-                <button class="layui-btn layui-btn-sm btn-warning" id="btn_authorize_close" type="button">
+                <button class="layui-btn layui-btn-sm btn-warning" id="btn_close" type="button">
                     <i class="ficon icon-cha"></i>取 消
                 </button>
             </div>
@@ -80,8 +87,8 @@
     </div>
     <script type="text/html" id="bar_action">
         <div class="layui-btn-group">
-            {% if is_can('user.user_authorize') %}
-                <a class="layui-btn layui-btn-sm btn-primary" lay-event="detail">明细权限</a>
+            {% if is_can('role.role_add_edit') %}
+                <a class="layui-btn layui-btn-sm btn-primary" lay-event="edit">修改</a>
                 <a class="layui-btn layui-btn-sm btn-brown" lay-event="delete">删除</a>
             {% endif %}
         </div>
@@ -104,8 +111,11 @@
                         loading: true,
                         cols: [[
                             {type: 'numbers'},
-                            {field: 'role', title: '权限标识', sort: true},
-                            {field: 'role_name', title: '权限名称'}
+                            {field: 'role', title: '权限标识', width: 150, sort: true},
+                            {field: 'role_name', title: '权限名称', width: 150},
+                            {field: 'role_allow', title: '允许的权限'},
+                            {field: 'role_deny', title: '禁用的权限'},
+                            {title: '操作', width: 140, align: 'center', fixed: 'right', toolbar: '#bar_action'}
                         ]],
                         d: {
                             url: '{{ url_for('role.role_list') }}',
@@ -114,33 +124,63 @@
                     };
                     $.autoTbl(cfg);
                 },
-                // 新增权限组
-                add: function () {
-                    layer.msg('暂未开放')
-                },
-                // 权限明细
-                detail: function (d) {
-                    layer.msg('暂未开放');
+                // 新增修改权限组
+                add_edit: function (data) {
+                    FN.reset_form('#frm_add_edit');
+                    let title = '新增权限组';
+                    data = data || {};
+                    if (data.role_id) {
+                        form.val('frm_add_edit', data);
+                        title = '修改权限组';
+                    }
+                    layer.open({
+                        title: title,
+                        type: 1,
+                        content: $('#div_add_edit'),
+                        success: function (layero, index) {
+                            form.on('submit(btn_save)', function (d) {
+                                var btn = $(this);
+                                $.mkAjax(d.field, '{{ url_for('role.role_add_edit') }}', title,
+                                    function (r) {
+                                        BTN_SEARCH.trigger('click');
+                                        index && layer.close(index);
+                                    }, btn);
+                                return false;
+                            });
+                            $('#btn_close').on('click', function () {
+                                index && layer.close(index);
+                            });
+                        }
+                    });
+                    return false;
                 },
                 // 删除
                 delete: function (d) {
-                    layer.msg('暂未开放');
+                    let txt = '确定删除权限组（<b>' + d.role_name + '</b>）？<br>' +
+                        '<b class="c-danger">该权限组的所有用户将无法登录!</b>';
+                    layer.confirm(txt, {icon: 3, title: '请仔细核对'}, function () {
+                        $.mkAjax({role: d.role}, '{{ url_for('role.role_delete') }}', '删除权限组',
+                            function (r) {
+                                BTN_SEARCH.trigger('click');
+                            });
+                    });
                     return false;
                 },
                 // 弹出层大小
                 get_pop_area: function () {
                     let w = $(window).width();
                     let h = $(window).height();
-                    w = w > 880 ? 880 : (w - 20)
-                    h = h > 600 ? 600 : h
-                    return [w, h]
+                    w = w > 880 ? 880 : (w - 20);
+                    h = h > 600 ? 600 : h;
+                    return [w, h];
                 },
                 // 清除表单
-                reset_form: function (id, bgp) {
-                    $(id)[0].reset();
-                    $('.pop-bgp-value').val(bgp);
-                    $('.pop-bgp-text').text(bgp);
-                    form.render()
+                reset_form: function (dom) {
+                    if ($(dom).length) {
+                        $(dom)[0].reset();
+                        $('.pop-role-id').val(0);
+                        form.render();
+                    }
                 }
             };
 
@@ -153,15 +193,15 @@
             });
 
             // 新增
-            $('#f_btn_add').click(function () {
-                FN.add();
+            $('#f_btn_add').on('click', function () {
+                FN.add_edit();
             });
 
             table.on('tool(tbl_main)', function (obj) {
                 let data = obj.data;
                 switch (obj.event) {
-                    case 'detail':
-                        FN.detail(data);
+                    case 'edit':
+                        FN.add_edit(data);
                         break;
                     case 'delete':
                         FN.delete(data);
